image scale scale on hover
fixed so image scale on hover

--- a/app/css/_animations.sass
+++ b/app/css/_animations.sass
@@ -5,9 +5,9 @@ $default-transition-duration: 3s
   overflow: hidden
   width: 100%
 
-  &:hover:first-child
+  &:hover
     .image-holder
-      transform: scale(1.03, 1.03)
+      transform: scale(1.02, 1.02)
 
       &:after
         background-color: rgba(0, 0, 0, 0)
@@ -102,7 +102,6 @@ $default-transition-duration: 3s
     -ms-transform: translateY(-15px)
     -webkit-transform: translateY(-15px)
     transform: translateY(-15px)
-
 
 .arrow-container
   position: absolute
