--- a/app/views/index.html
+++ b/app/views/index.html
@@ -8,7 +8,7 @@
           <h2>Heineken</h2>
         </div>
       </div>
-    <div>
+    </div>
   </a>
 
   <a href="mcdonalds.html">
@@ -18,7 +18,7 @@
           <h2>McDonalds</h2>
         </div>
       </div>
-    <div>
+    </div>
   </a>
 
   <a href="falsterbo.html">
@@ -28,7 +28,7 @@
           <h2>Falsterbo</h2>
         </div>
       </div>
-    <div>
+    </div>
   </a>
 
 </div><!--Container-->
