--- a/app/views/index.html
+++ b/app/views/index.html
@@ -3,33 +3,25 @@
 
   <a href="heineken.html">
     <div class="image-element">
-      <div class="image-holder heinekenCover">
-        <div class="hero-desc">
-          <h2>Heineken</h2>
-        </div>
-      </div>
+      <h2>Heineken</h2>
+        <div class="image-holder heinekenCover"></div>
     </div>
   </a>
 
   <a href="mcdonalds.html">
     <div class="image-element">
-      <div class="image-holder mcdonaldsCover">
-        <div class="hero-desc">
-          <h2>McDonalds</h2>
-        </div>
-      </div>
+      <h2>McDonalds</h2>
+        <div class="image-holder mcdonaldsCover"></div>
     </div>
   </a>
 
   <a href="falsterbo.html">
     <div class="image-element">
-      <div class="image-holder falsterboCover">
-        <div class="hero-desc">
-          <h2>Falsterbo</h2>
-        </div>
-      </div>
+      <h2>Falsterbo</h2>
+        <div class="image-holder falsterboCover"></div>
     </div>
   </a>
+
 
 </div><!--Container-->
 @@include('./partials/footer.html')
