--- a/app/css/_animations.sass
+++ b/app/css/_animations.sass
@@ -1,16 +1,39 @@
-$default-transition-duration: 3s
+$default-transition-duration: 2s
 
 .image-element
+  position: relative
   max-width: 1680px
   overflow: hidden
   width: 100%
+  transition: transform $default-transition-duration ease-in-out
+
+  h2
+    color: $white
+    font-family: $main-font
+    position: absolute
+    z-index: 10
+    padding: 0
+    margin: 0
+    text-align: center
+    width: 100%
+    top: 50%
+    transform: translateY(-50%)
+    font-size: 4.2rem
+    display: block
+    box-sizing: border-box
+    letter-spacing: -0.2rem
+    font-weight: 500
+
+    @media (max-width: $small)
+      font-size: 2.5rem
+      letter-spacing: -0.1rem
 
   &:hover
     .image-holder
-      transform: scale(1.02, 1.02)
+      transform: scale(1.025, 1.025)
 
       &:after
-        background-color: rgba(0, 0, 0, 0)
+        background-color: rgba(0, 0, 0, 0.0)
 
   .image-holder
     width: 100%
@@ -21,7 +44,6 @@ $default-transition-duration: 3s
     background-position: center
     display: table
     position: relative
-
     -webkit-backface-visibility: hidden
     transition: transform $default-transition-duration ease-in-out
     background-repeat: no-repeat
@@ -33,36 +55,23 @@ $default-transition-duration: 3s
     &.falsterboCover
       background-image: url(../public/images/falsterboCover.jpg)
 
+    &:after
+      transition: background-color $default-transition-duration ease-out
+      content: ""
+      position: absolute
+      width: 100%
+      height: 100%
+      background-color: rgba(0, 0, 0, .3)
+
     @media (max-width: $small)
       min-height: 500px
-      &.mcdonaldsCover
-        background-image: url(../public/images/mcdonaldsCover.jpg)
-      &.heinekenCover
-        background-image: url(../public/images/heinekenCover.jpg)
-      &.falsterboCover
-        background-image: url(../public/images/falsterboCover.jpg)
 
-    .hero-desc
-      position: relative
-      display: table-cell
-      vertical-align: middle
-      width: 100%
-      text-align: center
 
-      h2
-        font-size: 4.7rem
-        display: block
-        box-sizing: border-box
-        letter-spacing: -0.2rem
-        margin: 0
-        padding: 0
-        font-weight: 500
-        color: $white
-        font-family: $main-font
 
-        @media (max-width: $small)
-          font-size: 2.5rem
-          letter-spacing: -0.1rem
+
+
+
+
 
 @-moz-keyframes bounce
   0%, 20%, 50%, 80%, 100%
