--- a/app/css/_buttons.sass
+++ b/app/css/_buttons.sass
@@ -1,7 +1,7 @@
 .roundedBtn
 	width: 100%
 	margin: 0 auto
-	padding-bottom: 5%
+	margin-bottom: 5%
 	text-align: center
 	border: solid 2px $black
 	color: $black
