Added Laddkoll project
Added laddkoll section. Minor fixes, alignment-

--- a/app/css/_animations.sass
+++ b/app/css/_animations.sass
@@ -54,6 +54,9 @@ $default-transition-duration: 2s
       background-image: url(../public/images/heinekenCover.jpg)
     &.falsterboCover
       background-image: url(../public/images/falsterboCover.jpg)
+    &.laddkollCover
+      background-image: url(../public/images/laddkollCover.jpg)
+
 
     &:after
       transition: background-color $default-transition-duration ease-out
