--- a/app/css/_components.sass
+++ b/app/css/_components.sass
@@ -24,6 +24,8 @@
     background-image: url(../public/images/heinekenCover.jpg)
   &.falsterboCover
     background-image: url(../public/images/falsterboCover.jpg)
+  &.laddkollCover
+    background-image: url(../public/images/laddkollCover.jpg)
 
   @media (max-width: $small)
     min-height: 550px
