--- a/app/css/_variables.sass
+++ b/app/css/_variables.sass
@@ -6,7 +6,7 @@ $small: 480px
 $medium: 768px
 $large: 1000px
 
-$main-font: calibre-regular
+$main-font: calibre-regular , helvetica, sans-serif
 $sec-font: Merriweather , georgia
 
 @font-face
