--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,7 +1,7 @@
 @@include('./partials/header.html')
 
   <div class="row container-padding">
-    <div class="large-12 columns">
+    <div class="large-12 columns center">
       <h2>+46(0)706731248</h2>
       <h2>henrik.hoglund@hyperisland.se</h2>
     </div>
