--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,12 +1,19 @@
 @@include('./partials/header.html')
 <div class="mainContainer">
 
-  <a href="heineken.html">
+  <a href="laddkoll.html">
     <div class="image-element">
-      <h2>Heineken</h2>
-        <div class="image-holder heinekenCover"></div>
-    </div>
+      <h2>Laddkoll</h2>
+        <div class="image-holder laddkollCover"></div>
+    </div
   </a>
+
+  <a href="heineken.html">
+      <div class="image-element">
+        <h2>Heineken</h2>
+          <div class="image-holder heinekenCover"></div>
+      </div>
+    </a>
 
   <a href="mcdonalds.html">
     <div class="image-element">
