--- a/app/css/_typography.sass
+++ b/app/css/_typography.sass
@@ -1,7 +1,6 @@
 html
   +font-smoothing
 
-
 a
   color: #333333
   :visited
@@ -60,3 +59,6 @@ li
   font-family: $main-font
   font-size: 1.2rem
   line-height: 1.5
+
+.center
+  text-align: center
