--- a/app/views/heineken.html
+++ b/app/views/heineken.html
@@ -17,7 +17,7 @@
         <div class="large-12 columns">
           <h2>Heineken - International</h2>
           <h3>I worked on the #ChampionsTheMatch campain for Heineken. I make alot of images for the social channels like Twitter Facebook and for heiniken.com.
-        I worked with the visual design. My job was to visualise the location that the famous fotball player would tweet from.
+        I worked with the visual design. My job was to visualise the location that the famous football player would tweet from.
         The initial design was made by <a href="http://www.jennyjohannesson.com/">Jenny Johannesson.</a>
           </h3>
         </div>
